app/assets/stylesheets/mobile/mobile.css.scss
//------------------------- variables ------------------------------

$font-datehead: 'Lily Script One', Helvetica, Arial, sans-serif;
$font-body: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;

$icon-size: 25px;

$gold: #CC9933;
$dark-gray: #CACACA;
$medium-gray: #E8E8E8;
$light-gray: #F5F6F6;
$black: #000000;
$white: #FFFFFF;

//------------------------- defaults -------------------------------

body{
	font-family: $font-body;
	background: image-url('bg-maze.png') 50% 0 repeat fixed;
}

a,h1,h2,h3,h4,h5,h6{
  font-family: $font-body;
  font-weight: 500;
  line-height: 1.1;
  color: $black;
  text-decoration: none;
}
a:hover{
	text-decoration: none;
	color: #000;
}

hr {
	margin-top: 7px;
}

.container {
  margin-right: 0;
  margin-left: 0;
  padding-left: 0;
  padding-right: 0;
}

.btn {
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 13px;
  font-family: $font-body;
  line-height: 1.428571429;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 0;
  white-space: nowrap;
}
.btn-default {
  color: $black;
  background-color: $white;
  border-color: $dark-gray;
}

.nav {
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
  color: $white;
  background-color: $gold;
}

.dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  min-width: 160px;
  padding: 5px 0;
  margin: 2px 0 0;
  list-style: none;
  font-size: 13px;
  font-weight: normal;
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 0;
  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  background-clip: padding-box;
}
.dropdown-menu.pull-right {
  right: 0;
  left: auto;
}

.icon-standup{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') 0 0;}
.icon-openmic{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -25px 0;}
.icon-improv{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -50px 0;}
.icon-networking{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -75px 0;}
.icon-party{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') 0 -25px;}
.icon-poetry{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -25px -25px;}
.icon-happyhour{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -50px -25px;}
.icon-workshop{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -75px -25px;}
.icon-podcast{width:$icon-size;height:$icon-size;background:image-url('pcf_logos-mobile.png') -100px -25px;}
.icon-family{width:$icon-size;height:$icon-size;background:image-url('pcf_family.png') 0 0;} //added family icon for mobile

.arrow-left{
	height: 10px;
	float: left;
	-moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  margin-top: 12px;
}
.arrow-right{
	height: 10px;
	float: right;
	margin-top: 12px;
}
.head-pad{
	padding-top: 80px;
}

.icon-family{width:30px;height:30px;background:image-url('pcf_family.png') 0 0;} //added family icon for mobile



//-------------------------- custom ---------------------------------

body{

	#nav-bar{
		position: fixed;
		background-color: #ffcc66;
		opacity: 1;
		min-height: 70px;
		min-width: 100%;
		z-index: 0;
		left: 0;
		top: 0;
		transition: margin-top .5s ease-in-out;
    -moz-transition: margin-top .5s ease-in-out;
		-webkit-transition: margin-top .5s ease-in-out;
		box-shadow: 0 1px 2px $dark-gray;
	}

	#pcf-logo{
		max-height: 70px;
		float: left;
		display: inline-block;
		position: fixed;
		transition: margin-top .5s ease-in-out;
    -moz-transition: margin-top .5s ease-in-out;
		-webkit-transition: margin-top .5s ease-in-out;
		-webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.5));
		-moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.5));
		-ms-filter: drop-shadow(0 1px 2px rgba(0,0,0,.5));
		-o-filter: drop-shadow(0 1px 2px rgba(0,0,0,.5));
		filter: drop-shadow(0 1px 2px rgba(0,0,0,.5));
	}

	#navbar{
		position: fixed;
		display: inline-block;
		width: 80%;
		left: 20%;
		max-height: 50px;
		float: left;
		transition: margin-top .5s ease-in-out;
    -moz-transition: margin-top .5s ease-in-out;
		-webkit-transition: margin-top .5s ease-in-out;

		#nav-top{
			display: block;
			width: 100%;
			height: 35px;
				
			.nav-starred {
			  list-style: none;
				display: inline-block;
				background-color: #f5f6f6;
				padding: 0;
				margin: 1px 3px;
				border-radius: 0;
				float: left;
			}
			nav-starred:hover{
				background-color: #e1e1e1;
			}

			#venue-drop{
				float: left;
				border: 0px;
				color: $dark-gray;
				max-width: 50%;
			}

			#venuefilter{
				margin: 1px 3px;
				border: 0px;
				color: $white;
				overflow: hidden;
				background-color: transparent;
			}
			#venuefilter:hover,
			#venuefilter:focus{
				background-color: transparent;
				border: 0px;
				color: $gold;
			}

			.loginnout{
				display: inline-block;
				float: right;
				.innout-btn{
					margin: 1px 3px;
					float: right;
					border: 0px;
					color: $white;
					background-color: transparent;
				}
				.innout-btn:hover,
				.innout-btn:focus{
					background-color: transparent;
					border: 0px;
					color: $gold;
				}

				.login-form{
					padding: 8px 20px;
					float: right;

					.form-label{
						font-weight: normal;
					}
					.form-input{
						border: 1px solid $dark-gray;
	 				  border-radius: 0;
	 				  background-color: $medium-gray;
	 				  margin-bottom: 10px;
	 				  max-width: 210px;
	 				  padding: 0 10px;
					}
					#form-btn-l, #form-btn-r{
						padding: 3px 10px;
						display: inline;
					}
					#form-btn-l{
						float:left;
					}
					#form-btn-r{
						float:right;
					}
				}
			}
		}

		#nav-bottom{
			display: block;
			width: 100%;
			height: 35px;
			.nav-day {
				list-style: none;
				display: block;
				float: left;
				white-space: nowrap;

				#navm{
					overflow-x: scroll;
					max-height: 32px;
					white-space: nowrap;
					width: auto;
					display: inline-block;

					.nav-date a{
						display: inline-block;
						white-space: nowrap;
						height: 32px;
						color: $white;
					}
					.nav-date a:hover, 
					.nav-date a:focus{
						background-color: $white;
						border: 0px;
						color: $gold;
					}
				}

				.nav {
				  list-style: none;
					display: inline-block;
					background-color: transparent;
					padding: 0px 0px;
					margin: 1px 3px;
					border-radius: 0;
					font-size: 13px;
					float: left;
				}
			}
		}
	}
	.scroll{
		margin-top: -70px;
		transition: margin-top .5s ease-in-out;
    -moz-transition: margin-top .5s ease-in-out;
		-webkit-transition: margin-top .5s ease-in-out;
	}
	
	h2.date-header {
		letter-spacing: 1.5px;
		padding: 20px 0px 10px 0px;
		color: $gold;
		font-size: 20px;
		font-family: $font-datehead;
	}

	.panel-group .panel{
		margin-bottom: 0;
	}
	.panel-group .panel+.panel{
		margin: 0;
	}
	#all-events{
		padding-top: 60px;
	}

	.panel{
		margin: 0;
		background-color: $white;
		border: 1px solid $light-gray;
		border-radius: 0;

		.event-contain{
			background-color: $white;
			width: 100%;
			padding: 5px;
			display: block;
			-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);

			.event-contain-top{
				display: block;
				h4{
					max-width: 70%;
					display: inline-block;
				}
				.social-icon-contain{
					max-width: 30%;
					display: inline-block;
					float: right;
					.social-icon{
						cursor: pointer;
						width: $icon-size;
					}
				}
			}

			.event-contain-bottom{
				display: block;
				width: 100%;
				h2{
					font-weight: 500;
					margin-bottom: 0;
					margin-right: 5px;
				}
				p.event_time{
					margin: 0;
					color: $dark-gray;
				}
				#venuename{
					font-style: italic;
					color: $dark-gray;
				}
			}

			
			p{
				font-size: 13px;
				line-height: 18px;
			}

				.venue_name{
					font-weight: 500;
					height:10px;
				}

				.star_filled {
					background:url('../star_filled.png') no-repeat ;
					background-size: 25px 25px;
					margin: 2px 3px;
					padding: 0;
					border: none;
					width:25px;
					height:25px;
					cursor: pointer;
				}
				.star_unfilled {
					width:25px;
					margin: 2px 3px;
				}

			
		}

		.act-contain{
			background-color: $light-gray;
			//display: block;
			width: 100%;
			padding: 0px 5px 5px 5px;
			//display: none;

			h3{
				font-weight: 500;
			}
			hr {
				margin-bottom: 7px;
			}

			.act-top{
				display: block;
				vertical-align: top;
				width: 100%;
				word-wrap: normal;
				text-align: left;
				color: $black;
				padding-top: 10px;
			}

			.act-bottom{
				height: 100%;
				display: block;
				vertical-align: top;
				width: 100%;
				word-wrap: normal;
				text-align: left;
				color: $black;
			}
		}
	}
	
}

